# rust-diesel-crud

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2024-06-10-221013_create_users/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  repo.rs  schema.rs
