[package]
name = "my-money"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[[bin]]
name = "my-money"
path = "src/main.rs"
